[project]
name = "bedcmmPitch"
version = "0.1.0"
description = "Pitch detection using periodicity analysis"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "WATARU YASUHARA" }
]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=2.0.2",
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython",
    "numpy"
]

build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
]
